Set dummy column in Iceberg Hive catalog for variant type
(cherry picked from commit aff0e1e6960caa0b0a469c9a6b341f7f4decc59c)